--- a/data_cleaning/split_dataset.ipynb
+++ b/data_cleaning/split_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "78f0078c-22bb-4050-848d-0775b492ae34",
    "metadata": {},
    "outputs": [],
@@ -39,9 +39,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Kristian",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "thesis"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -53,7 +53,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
