feat: add some comments and changed file structure

--- a/dataset_creation/02_data_combining.ipynb
+++ b/dataset_creation/02_data_combining.ipynb
@@ -2,34 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import pandas as pd\n",
     "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "TD = pd.read_csv(\"with_labels_priority.csv\", index_col=0)"
+    "# Read CSV into a dataframe\n",
+    "priority = pd.read_csv(\"with_labels_priority.csv\", index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -42,18 +35,19 @@
        "       'Fabio-Git-dev/Programming_Languages'], dtype=object)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "TD[\"repo\"].unique()"
+    "# Uniques repos.\n",
+    "priority[\"repo\"].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -185,6 +179,22 @@
        "      <th>priority.Medium</th>\n",
        "      <td>356</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>priority_major</th>\n",
+       "      <td>350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bug priority: high</th>\n",
+       "      <td>348</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Component: website Priority: minor Resolution: fixed Type: defect</th>\n",
+       "      <td>344</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>type.Story priority.High</th>\n",
+       "      <td>339</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -216,16 +226,21 @@
        "priority.High type.Story                               379\n",
        "type.Task priority.High                                366\n",
        "bug low priority                                       358\n",
-       "priority.Medium                                        356"
+       "priority.Medium                                        356\n",
+       "priority_major                                         350\n",
+       "bug priority: high                                     348\n",
+       "Component: website Priority: minor Resolution: ...     344\n",
+       "type.Story priority.High                               339"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "TD.labels.value_counts().to_frame()[:26]"
+    "# Number or different labels\n",
+    "TD.labels.value_counts().to_frame()[:30]"
    ]
   },
   {
@@ -234,7 +249,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TD[\"class\"] = \"priority\""
+    "# Add a new column\n",
+    "priority[\"class\"] = \"priority\""
    ]
   },
   {
@@ -512,7 +528,7 @@
     }
    ],
    "source": [
-    "TD"
+    "priority"
    ]
   },
   {
@@ -783,6 +799,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Remvoe every label that is not \"bug\"\n",
     "bug1 = bug[bug[\"labels\"]==\"bug\"]"
    ]
   },
@@ -1045,7 +1062,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "enchancement = pd.read_csv(\"Final_enchancement_dataset.csv\", index_col=0)\n"
+    "enchancement = pd.read_csv(\"Final_enchancement_dataset.csv\", index_col=0)"
    ]
   },
   {
@@ -3679,18 +3696,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "NonTD = pd.concat([bug1,enchancement1,feature1,question1,documentation1,wontfix1] , ignore_index= True)"
+    "non_priority = pd.concat([bug1,enchancement1,feature1,question1,documentation1,wontfix1] , ignore_index= True)"
    ]
   },
   {
@@ -3943,7 +3953,7 @@
     }
    ],
    "source": [
-    "NonTD"
+    "non_priority"
    ]
   },
   {
@@ -3952,7 +3962,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "NonTD[\"class\"] = \"not_priority\""
+    "non_priority[\"class\"] = \"not_priority\""
    ]
   },
   {
@@ -4217,7 +4227,7 @@
     }
    ],
    "source": [
-    "NonTD"
+    "non_priority"
    ]
   },
   {
@@ -4495,7 +4505,7 @@
     }
    ],
    "source": [
-    "TD"
+    "priority"
    ]
   },
   {
@@ -4504,7 +4514,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ALL_data = pd.concat([TD,NonTD], ignore_index=True)"
+    "# Concat all dataframes into one dataframe\n",
+    "all_data = pd.concat([TD,NonTD], ignore_index=True)"
    ]
   },
   {
@@ -4782,7 +4793,7 @@
     }
    ],
    "source": [
-    "ALL_data"
+    "all_data"
    ]
   },
   {
@@ -4791,15 +4802,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ALL_data.to_csv(\"full_dataset_prio.csv\")"
+    "# Convert dataframe to a CSV file.\n",
+    "all_data.to_csv(\"full_dataset_prio.csv\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
