feat: extracted high, medium and low priority dataset

--- a/dataset_creation_from_scratch/label_exploration.ipynb
+++ b/dataset_creation_from_scratch/label_exploration.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "6fb35679-1c06-405e-9105-4a3ba9d66895",
    "metadata": {},
    "outputs": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "b88d8713-ed85-4055-9247-7b16a3adea73",
    "metadata": {
     "scrolled": true
@@ -216,294 +216,59 @@
      "output_type": "stream",
      "text": [
       "high: 99373 occurrences\n",
-      "priority:: 66113 occurrences\n",
-      "medium: 43882 occurrences\n",
-      "low: 42370 occurrences\n",
-      "priority: 40035 occurrences\n",
-      "critical: 13462 occurrences\n",
-      "minor: 12752 occurrences\n",
-      "urgent: 11635 occurrences\n",
-      "major: 9404 occurrences\n",
-      "severity.low: 6268 occurrences\n",
-      "severity.medium: 5199 occurrences\n",
       "priority.high: 4791 occurrences\n",
       "priority/high: 3835 occurrences\n",
-      "severity.verylow: 3796 occurrences\n",
-      "severity:: 3642 occurrences\n",
-      "priority-normal: 3171 occurrences\n",
       "priority:high: 2970 occurrences\n",
-      "impact:: 2918 occurrences\n",
       "severity.high: 2660 occurrences\n",
-      "priority/normal: 2552 occurrences\n",
-      "priority.medium: 2092 occurrences\n",
-      "priority-critical: 2065 occurrences\n",
-      "priority/critical-urgent: 2041 occurrences\n",
-      "priority/medium: 1904 occurrences\n",
-      "priority:medium: 1854 occurrences\n",
       "high-priority: 1758 occurrences\n",
-      "severity: 1599 occurrences\n",
-      "priority:low: 1579 occurrences\n",
       "bugbug-probability-high: 1571 occurrences\n",
-      "priority/important-soon: 1536 occurrences\n",
       "priority-high: 1478 occurrences\n",
-      "priority/p2: 1417 occurrences\n",
-      "severity/major: 1273 occurrences\n",
-      "priority/low: 1269 occurrences\n",
       "mahasiswa-ut-making-higher-education-open-to-all: 1243 occurrences\n",
-      "priority-important: 1223 occurrences\n",
-      "priority-medium: 1108 occurrences\n",
-      "priority/backlog: 1088 occurrences\n",
-      "low-priority: 1060 occurrences\n",
-      "priority/blocker: 1041 occurrences\n",
-      "1.severity:: 1011 occurrences\n",
-      "impact: 885 occurrences\n",
-      "priority-low: 879 occurrences\n",
       "ml-probability-high: 878 occurrences\n",
-      "priority/p3: 870 occurrences\n",
-      "workflow: 791 occurrences\n",
-      "priority/important-longterm: 789 occurrences\n",
-      "priority/critical: 724 occurrences\n",
-      "p-medium: 720 occurrences\n",
       "p-high: 707 occurrences\n",
-      "lowfee-xcash-rocks: 689 occurrences\n",
-      "tensorflower: 683 occurrences\n",
-      "priority-5-triage: 673 occurrences\n",
-      "severity/p1: 658 occurrences\n",
-      "priority/p1: 645 occurrences\n",
-      "priority.low: 639 occurrences\n",
       "highest: 628 occurrences\n",
-      "priority:p1: 616 occurrences\n",
-      "severity/critical: 596 occurrences\n",
-      "priority_major: 588 occurrences\n",
-      "p-low: 578 occurrences\n",
       "priority/highest: 575 occurrences\n",
-      "severity/moderate: 572 occurrences\n",
-      "severity/p2: 545 occurrences\n",
-      "flow: 531 occurrences\n",
-      "2-medium: 531 occurrences\n",
       "prio:high: 505 occurrences\n",
-      "worflow-failed: 495 occurrences\n",
-      "following: 469 occurrences\n",
-      "needs-priority: 459 occurrences\n",
-      "pri:low: 458 occurrences\n",
-      "priority:1: 456 occurrences\n",
-      "impact:low: 443 occurrences\n",
-      "followup: 443 occurrences\n",
-      "priority-1: 438 occurrences\n",
-      "workflow-failed: 425 occurrences\n",
-      "impact:medium: 424 occurrences\n",
-      "severity/minor: 419 occurrences\n",
-      "s-minor: 416 occurrences\n",
-      "priority-2: 414 occurrences\n",
-      "priority:p2: 406 occurrences\n",
-      "task.getseverity(): 398 occurrences\n",
       "impact:high: 384 occurrences\n",
-      "priority:2: 375 occurrences\n",
-      "priority-3: 372 occurrences\n",
-      "bugminor: 366 occurrences\n",
-      "[priority]: 365 occurrences\n",
-      "priority/p0: 362 occurrences\n",
-      "priority1: 352 occurrences\n",
-      "s-major: 333 occurrences\n",
       "high]: 331 occurrences\n",
-      "pri:lowest: 309 occurrences\n",
       "high-prio: 303 occurrences\n",
-      "priority:p3: 300 occurrences\n",
-      "priority/major: 299 occurrences\n",
-      "priority:normal: 296 occurrences\n",
-      "criticality: 296 occurrences\n",
-      "p3-medium: 294 occurrences\n",
-      "s_critical: 287 occurrences\n",
-      "medium-priority: 287 occurrences\n",
-      "effort/medium: 286 occurrences\n",
-      "severity-critical: 282 occurrences\n",
-      "prio:medium: 280 occurrences\n",
-      "priority/2: 280 occurrences\n",
-      "priority-3-normal: 278 occurrences\n",
-      "priority/1: 274 occurrences\n",
-      "type:critical: 266 occurrences\n",
-      "p2-medium: 254 occurrences\n",
-      "severity-important: 253 occurrences\n",
       "3-high: 251 occurrences\n",
-      "priority/awaiting-more-evidence: 243 occurrences\n",
-      "priority:0: 237 occurrences\n",
-      "priority:critical: 237 occurrences\n",
-      "e-medium: 234 occurrences\n",
       "highcharts: 231 occurrences\n",
-      "follow: 231 occurrences\n",
-      "priority/3: 227 occurrences\n",
       "pri:high: 225 occurrences\n",
-      "prio:low: 223 occurrences\n",
-      "workflows: 208 occurrences\n",
-      "[priority:: 200 occurrences\n",
-      "priority_critical: 200 occurrences\n",
-      "severity-minor: 199 occurrences\n",
-      "balaji-sunflower: 195 occurrences\n",
-      "priority_minor: 192 occurrences\n",
-      "priority/p4: 179 occurrences\n",
-      "effort-medium: 179 occurrences\n",
-      "severity:minor: 179 occurrences\n",
-      "effort-low: 178 occurrences\n",
-      "priority2: 177 occurrences\n",
-      "priority-0: 175 occurrences\n",
-      "priority:3: 174 occurrences\n",
       "prio-high: 164 occurrences\n",
-      "linwood-flow: 162 occurrences\n",
-      "difficulty/medium: 159 occurrences\n",
-      "priority/minor: 157 occurrences\n",
-      "p.low: 155 occurrences\n",
-      "3-low: 155 occurrences\n",
-      "freeze-slow-crash-leak: 154 occurrences\n",
       "importance:high: 154 occurrences\n",
-      "difficulty:medium: 153 occurrences\n",
-      "(minor): 151 occurrences\n",
-      "dialogflow: 150 occurrences\n",
       "p:high: 148 occurrences\n",
-      "severity/blocker: 144 occurrences\n",
-      "medium-script: 144 occurrences\n",
-      "linwood-flow-docs: 142 occurrences\n",
-      "low-prio: 139 occurrences\n",
-      "workflow:new: 136 occurrences\n",
-      "flow:: 134 occurrences\n",
-      "prio-low: 131 occurrences\n",
-      "low-hanging-fruit: 130 occurrences\n",
       "priority::high: 130 occurrences\n",
-      "stack-overflow: 129 occurrences\n",
       "priority:2-high: 128 occurrences\n",
       "p1-high: 125 occurrences\n",
-      "anp-urgent: 125 occurrences\n",
-      "s_major: 123 occurrences\n",
       "highlight: 121 occurrences\n",
-      "priority-4: 121 occurrences\n",
-      "severity-medium: 120 occurrences\n",
-      "overflow: 120 occurrences\n",
-      "non-critical: 119 occurrences\n",
-      "bug-minor: 119 occurrences\n",
-      "severity-crash: 118 occurrences\n",
-      "pri:medium: 115 occurrences\n",
-      "p.medium: 114 occurrences\n",
-      "p0-critical: 113 occurrences\n",
-      "p:low: 109 occurrences\n",
-      "impact:critical: 109 occurrences\n",
-      "2-major: 107 occurrences\n",
-      "priority:urgent: 106 occurrences\n",
-      "(medium): 106 occurrences\n",
-      "priority-2-important: 105 occurrences\n",
       "highpriority: 105 occurrences\n",
-      "1-low: 104 occurrences\n",
-      "qa_minor: 104 occurrences\n",
       "impact/high: 102 occurrences\n",
       "severity-high: 101 occurrences\n",
-      "i-slow: 101 occurrences\n",
-      "urgente: 100 occurrences\n",
-      "allowlist: 100 occurrences\n",
-      "effort:low: 99 occurrences\n",
-      "priority/important: 99 occurrences\n",
-      "2follow: 99 occurrences\n",
-      "low-hanging: 98 occurrences\n",
-      "prio-medium: 97 occurrences\n",
-      "❗️medium: 96 occurrences\n",
-      "impact/critical: 96 occurrences\n",
-      "priority/nice-to-have: 95 occurrences\n",
-      "low_priority: 94 occurrences\n",
-      "lowest: 94 occurrences\n",
-      "p3-minor-bug: 94 occurrences\n",
-      ":hourglass_flowing_sand:: 93 occurrences\n",
-      "impact-medium: 92 occurrences\n",
-      "workflow:: 91 occurrences\n",
-      "impact): 91 occurrences\n",
       "priority_high: 90 occurrences\n",
-      "priority/urgent: 89 occurrences\n",
-      "severity/low: 87 occurrences\n",
-      "difficulty/2:medium: 86 occurrences\n",
       "(high): 86 occurrences\n",
-      "3-minor: 86 occurrences\n",
-      "priority-a: 85 occurrences\n",
-      "impact-low: 84 occurrences\n",
-      "s_minor: 84 occurrences\n",
-      "follow-up: 84 occurrences\n",
-      "severity:major: 83 occurrences\n",
-      "difficulty:low: 83 occurrences\n",
-      "x:size/medium: 82 occurrences\n",
-      "priority::medium: 82 occurrences\n",
-      "stackoverflow: 81 occurrences\n",
-      "priority3: 81 occurrences\n",
-      "medium_priority: 80 occurrences\n",
-      "severity:normal: 80 occurrences\n",
-      "impact/medium: 80 occurrences\n",
-      "semver:minor: 79 occurrences\n",
-      "priority-4-low: 79 occurrences\n",
       "effort-high: 79 occurrences\n",
       "p/high: 78 occurrences\n",
-      "priority/0: 78 occurrences\n",
-      "prio-critical: 76 occurrences\n",
-      "severity:critical: 76 occurrences\n",
-      "severity/sev-4: 76 occurrences\n",
-      "qa_major: 76 occurrences\n",
       "1-high: 75 occurrences\n",
-      "severity:medium: 75 occurrences\n",
-      "priority-p1: 75 occurrences\n",
-      "p-critical: 75 occurrences\n",
-      "complexity:medium: 74 occurrences\n",
-      "lower: 74 occurrences\n",
-      "impacts: 74 occurrences\n",
-      "impacting:: 73 occurrences\n",
-      "p3-major: 73 occurrences\n",
-      "p:medium: 73 occurrences\n",
       "prio/high: 73 occurrences\n",
-      "severity-major: 72 occurrences\n",
-      "(low): 72 occurrences\n",
-      "dataflow: 72 occurrences\n",
-      "size:medium: 72 occurrences\n",
-      "priority-med: 72 occurrences\n",
-      "impact:needs-assessment: 71 occurrences\n",
-      "impact/low: 71 occurrences\n",
       "p2-high: 70 occurrences\n",
       "severity/high: 70 occurrences\n",
-      "p3-low: 69 occurrences\n",
-      "tensorflow: 69 occurrences\n",
-      "severity3:: 69 occurrences\n",
-      "size/medium: 68 occurrences\n",
-      "low-energy: 68 occurrences\n",
-      "severity-nice-to-have: 67 occurrences\n",
       "high-pri: 67 occurrences\n",
       "highlighting: 66 occurrences\n",
-      "xp:minor: 66 occurrences\n",
-      "p:critical: 66 occurrences\n",
-      "s-medium: 66 occurrences\n",
-      "urgent!: 65 occurrences\n",
-      "e-low: 65 occurrences\n",
-      "priority-p2: 64 occurrences\n",
-      "priority:major: 62 occurrences\n",
       "area/syntaxhighlighting: 62 occurrences\n",
       "i3-high🔥: 61 occurrences\n",
       "priority-0-high: 60 occurrences\n",
-      "s-critical: 60 occurrences\n",
-      "major-change: 60 occurrences\n",
-      "urgent): 60 occurrences\n",
-      "dynaflow: 58 occurrences\n",
       "impact-high: 58 occurrences\n",
-      "p4-low: 58 occurrences\n",
-      "xp:major: 57 occurrences\n",
-      "priority/urgent-now: 57 occurrences\n",
-      "bug.minor: 57 occurrences\n",
-      "low-risk: 57 occurrences\n",
       "risk/high: 57 occurrences\n",
       "hight: 56 occurrences\n",
-      "priority::low: 56 occurrences\n",
-      "1-urgent: 56 occurrences\n",
-      "sev:high: 56 occurrences\n",
-      "severity:low: 55 occurrences\n",
-      "semver-major: 54 occurrences\n",
-      "lowpriority: 54 occurrences\n",
-      "risk-low: 54 occurrences\n"
+      "sev:high: 56 occurrences\n"
      ]
     }
    ],
    "source": [
     "# Keywords that might indicate priority\n",
-    "priority_keywords = [\"high\", \"medium\", \"low\", \"urgent\", \"critical\", \"priority\", \"major\", \"minor\", \"severity\", \"impact\"]\n",
-    "\n",
+    "#priority_keywords = [\"high\", \"medium\", \"low\", \"urgent\", \"critical\", \"priority\", \"major\", \"minor\", \"severity\", \"impact\"]\n",
+    "priority_keywords = [\"high\"]\n",
     "# Filter top_labels for labels containing priority keywords (case-insensitive matching)\n",
     "priority_related_labels = {label: count for label, count in top_labels.items() if any(keyword in label.lower() for keyword in map(str.lower, priority_keywords))}\n",
     "\n",
