--- a/dataset_creation/priority_high_low_med/02_data_combining.ipynb
+++ b/dataset_creation/priority_high_low_med/02_data_combining.ipynb
@@ -3262,7 +3262,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -3276,7 +3276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.8.5"
   },
   "vscode": {
    "interpreter": {
