--- a/dataset_creation/priority_high_low_med/04_bert_priority.ipynb
+++ b/dataset_creation/priority_high_low_med/04_bert_priority.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8a3689e3",
+   "id": "2647ffbf",
    "metadata": {},
    "source": [
     "# Importsand preparations"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "af78b5b3",
+   "id": "679adbf2",
    "metadata": {
     "tags": []
    },
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "63e22bd2",
+   "id": "8780e46f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "419a5ac0",
+   "id": "e41b2b0a",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "adfc7938",
+   "id": "8c465b8d",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "30367803",
+   "id": "6eae1f6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "97567b2e",
+   "id": "66612228",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8ceb9f02",
+   "id": "3811e177",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "88097d06",
+   "id": "37bc1a86",
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "62445e98",
+   "id": "7d0a3abd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "18440b0d",
+   "id": "471521d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "96eb4376",
+   "id": "51965d1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1ee63dd9",
+   "id": "36ca91c1",
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "795db55e",
+   "id": "9c0c6649",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5b83920b",
+   "id": "bb6ff665",
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "2e3c109a",
+   "id": "30aaa209",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "2a09cb37",
+   "id": "77e40e45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "99d90150",
+   "id": "e85d2be1",
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "6c83af7b",
+   "id": "b2e02d84",
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +859,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "961b2dcb",
+   "id": "67267f61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -871,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "29172805",
+   "id": "4b8be1e8",
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "d745620d",
+   "id": "e589f8c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "62e6bab2",
+   "id": "bb286043",
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90040367",
+   "id": "3f69554c",
    "metadata": {},
    "source": [
     "## Tokenization"
@@ -938,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "d4f9b7b4",
+   "id": "dfe27e7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17f32686",
+   "id": "9fe4871f",
    "metadata": {},
    "source": [
     "    Tokenizing the whole dataset"
@@ -957,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "2605405e",
+   "id": "8e9d6a1f",
    "metadata": {},
    "outputs": [
     {
@@ -1015,7 +1015,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3c50f3f",
+   "id": "0563636b",
    "metadata": {},
    "source": [
     "## Training a classifier"
@@ -1024,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "54728eb6",
+   "id": "c225dd26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "0287cc99",
+   "id": "b55825b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1061,7 +1061,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "8bebeaa4",
+   "id": "e7a092e7",
    "metadata": {},
    "outputs": [
     {
@@ -1165,7 +1165,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "936459cd",
+   "id": "27dbcd7a",
+   "metadata": {},
+   "source": [
+    "* Training loss: Difference between the predictons made by the model on the training dataset vs on the actual data.\n",
+    "* Validation loss: how well the model functions on unseen data.\n",
+    "* Accuracy: How much the model gets correct. number of correct Prediction / total number of predictions.\n",
+    "* F1: consider both precision and recall. \n",
+    "* Precision: Accuracy of positive predictions. Percison TP = TP + FP. How often the model is correct.\n",
+    "* Recall: True positive rate. how many items the model gets correct from the total amount."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bdc1fbea",
    "metadata": {},
    "source": [
     "### Training loss decreases, valdiation loss increases = Overfitting"
@@ -1174,7 +1187,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "04ece22e",
+   "id": "9858eea8",
    "metadata": {},
    "outputs": [
     {
@@ -1204,7 +1217,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "b2055894",
+   "id": "b6513085",
    "metadata": {},
    "outputs": [
     {
@@ -1240,7 +1253,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "21f787c6",
+   "id": "bf47e2ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1251,7 +1264,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "279be6df",
+   "id": "4d03fd8b",
    "metadata": {},
    "outputs": [
     {
@@ -1287,7 +1300,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "480718c1",
+   "id": "e6393324",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1297,7 +1310,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "e860fa7b",
+   "id": "473bd687",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1309,7 +1322,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "2e18fb4d",
+   "id": "595362bb",
    "metadata": {},
    "outputs": [
     {
@@ -1363,7 +1376,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "00e65ea5",
+   "id": "3b84fbe7",
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "092c111b",
+   "id": "de0b270b",
    "metadata": {},
    "source": [
     "## Important to delete large objects to free memory \n",
@@ -1393,7 +1406,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "abe068f3",
+   "id": "40617a94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1403,7 +1416,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "9484b6c0",
+   "id": "a6401bd5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1413,7 +1426,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "1e4a3ef1",
+   "id": "4bb7f55b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1424,7 +1437,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "a970574a",
+   "id": "23dc1357",
    "metadata": {},
    "outputs": [
     {
@@ -1493,7 +1506,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ba8ce60",
+   "id": "6afb6069",
    "metadata": {},
    "outputs": [],
    "source": []
