refactor: Put preprocess_text into separate file and check if text is english.

--- a/dataset_creation/priority_high_low_med/04_bert_priority.ipynb
+++ b/dataset_creation/priority_high_low_med/04_bert_priority.ipynb
@@ -71,7 +71,7 @@
     "print(f'CUDA version: {torch.version.cuda}')  # 11.1\n",
     "print(f'cuDNN version: {torch.backends.cudnn.version()}')  # 8005\n",
     "print(f'Current device: {torch.cuda.current_device()}')  # 0\n",
-    "print(f'Is cuda avaibable: {torch.cuda.is_available()}')  # TRUE"
+    "print(f'Is cuda available: {torch.cuda.is_available()}')  # TRUE"
    ]
   },
   {
