feat: prep for training on high or not high priority

--- a/priority/high_or_not_high/04_bert_priority.ipynb
+++ b/priority/high_or_not_high/04_bert_priority.ipynb
@@ -344,7 +344,7 @@
     }
    ],
    "source": [
-    "data = pd.read_csv(\"priority_high_med_low_dataset_clean.csv\" , index_col = 0)\n",
+    "data = pd.read_csv(\"csv/priority_high_or_not_clean\" , index_col = 0)\n",
     "data"
    ]
   },
