feat: high,med,low dataset pre for trainig form large data

--- a/priority/high_med_low_v2/04_bert_priority.ipynb
+++ b/priority/high_med_low_v2/04_bert_priority.ipynb
@@ -668,7 +668,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 60% training, 20% validate, 20% test. Seed None.\n",
+    "# 60% trainig, 20% validate, 20% test. Seed None.\n",
     "# Test 80-10-10 and 70-15-15\n",
     "train , validate , test = train_validate_test_split(data)"
    ]
