feat: prep for training high or not high v2

--- a/priority/label_searching/01_extract_issues_by_type.ipynb
+++ b/priority/label_searching/01_extract_issues_by_type.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "\n",
     "# folder path\n",
-    "dir_path = r'../csv/all_issues' ## Point to the extracted folder containing all the issues csv files\n",
+    "dir_path = r'../../csv/all_issues' ## Point to the extracted folder containing all the issues csv files\n",
     "\n",
     "# list to store files\n",
     "res = []\n",
@@ -105,8 +105,26 @@
    "outputs": [],
    "source": [
     "# Convert to csv\n",
-    "# data_to_csv = f\"csv/final_medium_dataset.csv\"\n",
-    "# appended_data.to_csv(data_to_csv)# type: ignore"
+    "# data_to_csv = f\"csv/different_labels.csv\"\n",
+    "# pattern_dataframes.to_csv(data_to_csv)# type: ignore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_dir = \"csv\"\n",
+    "os.makedirs(output_dir, exist_ok=True) \n",
+    "\n",
+    "for pattern, dataframe in pattern_dataframes.items():\n",
+    "    if not dataframe.empty:\n",
+    "        output_file = f\"{output_dir}/{pattern}_filtered.csv\"\n",
+    "        dataframe.to_csv(output_file, index=False)\n",
+    "        print(f\"Saved: {output_file}\")\n",
+    "    else:\n",
+    "        print(f\"No data for pattern: {pattern}\")\n"
    ]
   }
  ],
