--- a/priority/higt_or_not_high_v2/01_extract_issues_by_type.ipynb
+++ b/priority/higt_or_not_high_v2/01_extract_issues_by_type.ipynb
@@ -1897,7 +1897,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1911,7 +1911,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.13"
   },
   "vscode": {
    "interpreter": {
