feat: prep done for high vs med/low priorty

--- a/priority/high_vs_med_and_low_v1/05_bert_priority_training.ipynb
+++ b/priority/high_vs_med_and_low_v1/05_bert_priority_training.ipynb
@@ -35,7 +35,7 @@
     "    TrainingArguments,\n",
     ")\n",
     "\n",
-    "from datasets import load_dataset, Dataset, DatasetDict"
+    "from datasets import load_dataset"
    ]
   },
   {
@@ -129,14 +129,13 @@
    "outputs": [],
    "source": [
     "# Smaller and faster than bert.\n",
-    "\n",
     "model_ckpt = \"bert-base-uncased\"\n",
     "\n",
-    "epochs = 5 #Number of full cyles through the training set.\n",
+    "epochs = 5 #Number of full cycles through the training set.\n",
     "num_labels = 2 #Number of labels, high, med, low priority.\n",
     "learning_rate = 5e-5 # Rate the model updates based on the data its trained on.\n",
     "train_batch_size = 16 # Number of training examples in one iteration.\n",
-    "eval_batch_size = 32 # Number evalutaion examples in on iteratoion.\n",
+    "eval_batch_size = 32 # Number evaluation examples in on iteration.\n",
     "save_strategy = \"no\" # Should the model be saved automatically during training.\n",
     "save_steps = 500 # How often to save the model during training. No effect since no over.\n",
     "logging_steps = 100\n",
@@ -161,7 +160,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = load_dataset(\"kristmh/high_priority_or_not_high_1\")\n",
+    "dataset = load_dataset(\"kristmh/high_vs_med_and_low_priority\")\n",
     "dataset"
    ]
   },
@@ -186,9 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = AutoModelForSequenceClassification.from_pretrained(model_ckpt, num_labels=num_labels)\n",
-    "#tokenizer = AutoTokenizer.from_pretrained(base_model_id)\n",
-    "# optim = torch.optim.Adam(model.parameters(), lr=5e-5)"
+    "model = AutoModelForSequenceClassification.from_pretrained(model_ckpt, num_labels=num_labels)"
    ]
   },
   {
@@ -247,7 +244,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenized_dataset = dataset.map(tokenize, batched=True)"
+    "tokenized_dataset = dataset.map(tokenize, batched=True)\n",
+    "tokenized_dataset"
    ]
   },
   {
@@ -256,6 +254,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# List the columns of the dataset.\n",
+    "# Should be: [\"attention_mask\", \"input_ids\", \"labels\", \"token_type_ids\"]\n",
+    "# Remove unnecessary columns that the model does not expect.\n",
+    "tokenized_dataset = tokenized_dataset.remove_columns([\"text_clean\", \"class\", \"__index_level_0__\"])\n",
+    "\n",
     "train_dataset = tokenized_dataset[\"train\"]\n",
     "print(train_dataset)\n",
     "validation_dataset = tokenized_dataset[\"validate\"]\n",
@@ -337,7 +340,7 @@
    "id": "7c34a7fd",
    "metadata": {},
    "source": [
-    "### Training loss decreases, valdiation loss increases = Overfitting"
+    "### Training loss decreases, validation loss increases = Overfitting"
    ]
   },
   {
