feat: done training low vs random

--- a/priority/med_vs_random_issues_v1/05_bert_priority_training.ipynb
+++ b/priority/med_vs_random_issues_v1/05_bert_priority_training.ipynb
@@ -726,8 +726,7 @@
     }
    ],
    "source": [
-    "for key, value in sorted(eval_result.items()):\n",
-    "    print(f\"{key} = {value}\\n\")"
+    "kristmh/high_priority_or_not_high_1"
    ]
   },
   {
