feat: created new dataset for testing

--- a/priority/experiment/create_data_sets/04_upload_to_huggingface.ipynb
+++ b/priority/experiment/create_data_sets/04_upload_to_huggingface.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -55,33 +55,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>zindex issue using classic blockselecting a li...</td>\n",
+       "      <td>autolog out after some time frame is your feat...</td>\n",
        "      <td>0</td>\n",
-       "      <td>low_priority</td>\n",
+       "      <td>high_priority</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>indicate the language of a code blocktell us a...</td>\n",
+       "      <td>image picker for sourceimplement an android im...</td>\n",
        "      <td>0</td>\n",
-       "      <td>low_priority</td>\n",
+       "      <td>high_priority</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>use one attribute name for header title namema...</td>\n",
+       "      <td>fix video page listitem hovering behaviour whe...</td>\n",
        "      <td>0</td>\n",
-       "      <td>low_priority</td>\n",
+       "      <td>high_priority</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>document levels of validation in vldtermas thi...</td>\n",
+       "      <td>escape shuttle reaches ludicrous speed descrip...</td>\n",
        "      <td>0</td>\n",
-       "      <td>low_priority</td>\n",
+       "      <td>high_priority</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>support puml files in boilerplatessee this com...</td>\n",
+       "      <td>binder doesnt load notebooks outside of the un...</td>\n",
        "      <td>0</td>\n",
-       "      <td>low_priority</td>\n",
+       "      <td>high_priority</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -90,84 +90,85 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>247034</th>\n",
-       "      <td>twitch client needs to be able to reconnectnee...</td>\n",
+       "      <th>419837</th>\n",
+       "      <td>include motd feature in ci testscurrent messag...</td>\n",
        "      <td>1</td>\n",
-       "      <td>not_priority</td>\n",
+       "      <td>medium_and_low_priority</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>247035</th>\n",
-       "      <td>icon is not shown for resource time ranges whe...</td>\n",
+       "      <th>419838</th>\n",
+       "      <td>checkbox to disable tweeting displayed for non...</td>\n",
        "      <td>1</td>\n",
-       "      <td>not_priority</td>\n",
+       "      <td>medium_and_low_priority</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>247036</th>\n",
-       "      <td>update frameshift or mosaic logos on pdf repor...</td>\n",
+       "      <th>419839</th>\n",
+       "      <td>add additional labels to service monitorsis yo...</td>\n",
        "      <td>1</td>\n",
-       "      <td>not_priority</td>\n",
+       "      <td>medium_and_low_priority</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>247037</th>\n",
-       "      <td>readcount staying at 1 hello when i run contin...</td>\n",
+       "      <th>419840</th>\n",
+       "      <td>no mic button in the keyboard for hvr build co...</td>\n",
        "      <td>1</td>\n",
-       "      <td>not_priority</td>\n",
+       "      <td>medium_and_low_priority</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>247038</th>\n",
-       "      <td>warning time to take image differs from reques...</td>\n",
+       "      <th>419841</th>\n",
+       "      <td>rpmem errno is not set when passing invalid le...</td>\n",
        "      <td>1</td>\n",
-       "      <td>not_priority</td>\n",
+       "      <td>medium_and_low_priority</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>247039 rows × 3 columns</p>\n",
+       "<p>419842 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                                               text_clean  labels  \\\n",
-       "0       zindex issue using classic blockselecting a li...       0   \n",
-       "1       indicate the language of a code blocktell us a...       0   \n",
-       "2       use one attribute name for header title namema...       0   \n",
-       "3       document levels of validation in vldtermas thi...       0   \n",
-       "4       support puml files in boilerplatessee this com...       0   \n",
+       "0       autolog out after some time frame is your feat...       0   \n",
+       "1       image picker for sourceimplement an android im...       0   \n",
+       "2       fix video page listitem hovering behaviour whe...       0   \n",
+       "3       escape shuttle reaches ludicrous speed descrip...       0   \n",
+       "4       binder doesnt load notebooks outside of the un...       0   \n",
        "...                                                   ...     ...   \n",
-       "247034  twitch client needs to be able to reconnectnee...       1   \n",
-       "247035  icon is not shown for resource time ranges whe...       1   \n",
-       "247036  update frameshift or mosaic logos on pdf repor...       1   \n",
-       "247037  readcount staying at 1 hello when i run contin...       1   \n",
-       "247038  warning time to take image differs from reques...       1   \n",
+       "419837  include motd feature in ci testscurrent messag...       1   \n",
+       "419838  checkbox to disable tweeting displayed for non...       1   \n",
+       "419839  add additional labels to service monitorsis yo...       1   \n",
+       "419840  no mic button in the keyboard for hvr build co...       1   \n",
+       "419841  rpmem errno is not set when passing invalid le...       1   \n",
        "\n",
-       "               class  \n",
-       "0       low_priority  \n",
-       "1       low_priority  \n",
-       "2       low_priority  \n",
-       "3       low_priority  \n",
-       "4       low_priority  \n",
-       "...              ...  \n",
-       "247034  not_priority  \n",
-       "247035  not_priority  \n",
-       "247036  not_priority  \n",
-       "247037  not_priority  \n",
-       "247038  not_priority  \n",
+       "                          class  \n",
+       "0                 high_priority  \n",
+       "1                 high_priority  \n",
+       "2                 high_priority  \n",
+       "3                 high_priority  \n",
+       "4                 high_priority  \n",
+       "...                         ...  \n",
+       "419837  medium_and_low_priority  \n",
+       "419838  medium_and_low_priority  \n",
+       "419839  medium_and_low_priority  \n",
+       "419840  medium_and_low_priority  \n",
+       "419841  medium_and_low_priority  \n",
        "\n",
-       "[247039 rows x 3 columns]"
+       "[419842 rows x 3 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "file_name = f\"csv/clean_low_vs_not_priority.csv\"\n",
+    "name = \"high_vs_med_and_low_priority\"\n",
+    "file_name = f\"csv/clean_{name}.csv\"\n",
     "df = pd.read_csv(file_name)\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -200,25 +201,25 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>low_priority</th>\n",
-       "      <td>127414</td>\n",
+       "      <th>high_priority</th>\n",
+       "      <td>210100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>not_priority</th>\n",
-       "      <td>119625</td>\n",
+       "      <th>medium_and_low_priority</th>\n",
+       "      <td>209742</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               count\n",
-       "class               \n",
-       "low_priority  127414\n",
-       "not_priority  119625"
+       "                          count\n",
+       "class                          \n",
+       "high_priority            210100\n",
+       "medium_and_low_priority  209742"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -279,20 +280,20 @@
        "DatasetDict({\n",
        "    test: Dataset({\n",
        "        features: ['text_clean', 'labels', 'class', '__index_level_0__'],\n",
-       "        num_rows: 24705\n",
+       "        num_rows: 41985\n",
        "    })\n",
        "    train: Dataset({\n",
        "        features: ['text_clean', 'labels', 'class', '__index_level_0__'],\n",
-       "        num_rows: 197631\n",
+       "        num_rows: 335873\n",
        "    })\n",
        "    validate: Dataset({\n",
        "        features: ['text_clean', 'labels', 'class', '__index_level_0__'],\n",
-       "        num_rows: 24703\n",
+       "        num_rows: 41984\n",
        "    })\n",
        "})"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,13 +325,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "866e96b4552f4461966cd578b4848a42",
+       "model_id": "7eb1056f140f4bac9a15bec8d37a7ae0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -344,12 +345,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4c81630c483f4cc5b8356fa705d3ccbd",
+       "model_id": "365d39f2926f49f282e12bae29cbc108",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Creating parquet from Arrow format:   0%|          | 0/25 [00:00<?, ?ba/s]"
+       "Creating parquet from Arrow format:   0%|          | 0/42 [00:00<?, ?ba/s]"
       ]
      },
      "metadata": {},
@@ -358,7 +359,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "71ec2e1d0dc0485fa118e8bba7bf5fe3",
+       "model_id": "04153decd45d40739abdd88a710600c0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -372,12 +373,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4dc032e275cf482e80d1ec1827e64988",
+       "model_id": "0e43af2c738c41d8a95e951cc830b39f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Creating parquet from Arrow format:   0%|          | 0/198 [00:00<?, ?ba/s]"
+       "Creating parquet from Arrow format:   0%|          | 0/336 [00:00<?, ?ba/s]"
       ]
      },
      "metadata": {},
@@ -386,7 +387,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "73dc78ed00a54388b0724f618f3f9f86",
+       "model_id": "d87c9c6151854626a53915e200c74a4c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -400,12 +401,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "abb539bf9f4343aaae77785240005bc5",
+       "model_id": "c4483af0b1314ea8b54c6c50e6f3ce58",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Creating parquet from Arrow format:   0%|          | 0/25 [00:00<?, ?ba/s]"
+       "Creating parquet from Arrow format:   0%|          | 0/42 [00:00<?, ?ba/s]"
       ]
      },
      "metadata": {},
@@ -414,7 +415,7 @@
    ],
    "source": [
     "# Push to Hugging Face Hub\n",
-    "ds.push_to_hub(\"low_vs_not_priority\")"
+    "ds.push_to_hub(name)"
    ]
   }
  ],
